--- a/backend/eodiya/src/main/resources/application.properties
+++ b/backend/eodiya/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=80
 #spring.datasource.dbcp2.driver-class-name=mysql
 spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/ssafyweb?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/enjoytrip?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/eodiya?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
 spring.datasource.hikari.username=ssafy
 spring.datasource.hikari.password=ssafy
 
@@ -17,9 +17,8 @@ spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.auto-commit=true
 
 # mapper setting
-mybatis.type-aliases-package=com.ssafy.eodiya.*.model
+mybatis.type-aliases-package=com.ssafy.kiwi.*.model
 mybatis.mapper-locations=mapper/**/*.xml
-
 # file upload setting
 # path setting
 #spring.servlet.multipart.location=c:\\springboot\\upload
