--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,11 @@
   "dependencies": {
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "sass": "^1.62.1",
+    "sass-loader": "^10.4.1",
+    "swiper": "^5.4.5",
     "vue": "^2.6.14",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
