--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2",
-    "vuex-persistedstate": "^4.1.0"
+    "vuex-persistedstate": "^4.1.0",
+    "jwt-decode": "^3.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
