feat: 파일 저장까지 완료

--- a/backend/eodiya/src/main/resources/application.properties
+++ b/backend/eodiya/src/main/resources/application.properties
@@ -19,14 +19,7 @@ spring.datasource.hikari.auto-commit=true
 # mapper setting
 mybatis.type-aliases-package=com.ssafy.kiwi.*.model
 mybatis.mapper-locations=mapper/**/*.xml
-# file upload setting
-# path setting
-#spring.servlet.multipart.location=c:\\springboot\\upload
-#file.path=c:\\springboot\\upload
-#file.imgPath=c:\\springboot\\img
 
-# size setting
-#spring.servlet.multipart.max-file-size=25MB
 
 # logging setting
 logging.level.root=info
@@ -37,3 +30,20 @@ spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 
 #error/error
 #server.error.path:com.ssafy.eodiya.controller
+
+
+# file upload setting
+# path setting
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-request-size=30MB
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.location=c:\\SSAFY2\\eodiya\\frontend\\src\\assets
+#spring.servlet.multipart.location=c:\\springboot\\upload
+#file.path=c:\\springboot\\upload
+#file.imgPath=c:\\springboot\\img
+
+# size setting
+#spring.servlet.multipart.max-file-size=25MB
+
+
+
